# redshift-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yaml
conf.d/: sql_tools.example.yaml  tables.example.yaml
plugins/complex/: README.md  pyproject.toml
plugins/complex/src/redshift_mcp_complex/: __init__.py  _config.py  config.example.yaml  query.py
plugins/complex/tests/: test_date_validation.py  test_external_config.py  test_sql_template.py
plugins/error_api/: README.md  pyproject.toml
plugins/error_api/src/redshift_mcp_error_api/: __init__.py  _config.py  config.example.yaml  query.py
plugins/error_api/src/redshift_mcp_error_api/queries/: error_api.example.sql
plugins/error_api/tests/: test_date_validation.py  test_external_config.py  test_sql_template.py
queries/: active_devices.example.sql  active_devices.sql
sdk/: README.md  pyproject.toml
sdk/src/redshift_mcp_sdk/: __init__.py  errors.py  plugin.py
src/redshift_mcp/: __init__.py  config.py  db.py  errors.py  middleware.py  plugin.py  server.py  sql_guard.py  sql_tools.py
tests/: test_auth_middleware.py  test_config.py  test_config_include.py  test_errors.py  test_logging.py  test_plugin_loader.py  test_request_id.py  test_server_tools.py  test_session_client_log.py  test_sql_guard.py  test_sql_tools.py  test_tables_config.py
