[project]
name = "redshift-mcp"
version = "0.2.0"
description = "通用 Redshift MCP Server（Streamable HTTP）+ 插件框架：三件套通用查询工具 + entry_points / 声明式 SQL 扩展"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "psycopg[binary,pool]>=3.2.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "sqlglot>=25.0,<27",
]

[project.scripts]
redshift-mcp = "redshift_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redshift_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # required by starlette.testclient
]

# uv workspace（monorepo）：plugins/ 下每个目录都是一个 workspace 成员包（通配，新增插件无需逐个声明）。
# 自带插件靠 `uv sync --all-packages` 一并 editable 装上，使其 entry-point 在开发期生效。
# 第三方插件不碰这里：自建 wheel、`uv pip install` 进同一 venv 即被 entry_points 自动发现加载。
[tool.uv.workspace]
members = ["plugins/*"]

# 各成员包对宿主 redshift-mcp 的依赖走本地 workspace（按包名匹配，一条覆盖所有成员，无需逐插件写）。
[tool.uv.sources]
redshift-mcp = { workspace = true }

[tool.pytest.ini_options]
# plugins/*/tests 通配纳入各插件自带测试（pytest≥7 支持 testpaths glob），新增插件无需登记。
testpaths = ["tests", "plugins/*/tests"]
asyncio_mode = "auto"
