[project]
name = "redshift-mcp"
version = "0.3.0"
description = "通用 Redshift MCP Server（Streamable HTTP）+ 插件框架：三件套通用查询工具 + entry_points / 声明式 SQL 扩展"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    # server.py 直接 import starlette 中间件/请求对象，提为直接依赖；
    # 下限 1.3.1 钉住一组 DoS / Host header 污染的安全修复（GHSA-82w8-qh3p-5jfq 等）。
    "starlette>=1.3.1",
    "psycopg[binary,pool]>=3.2.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "sqlglot>=30.11.0,<31",
]

[project.scripts]
redshift-mcp = "redshift_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 放在 [tool.hatch.build] 全局层（而非仅 targets.wheel），让 sdist 与 wheel 都生效 ——
# 否则 `uv build` 先打 sdist 再从 sdist 出 wheel，仅 wheel 配的 artifacts 会被绕过。
[tool.hatch.build]
# 把仓库根目录的 config.example.yaml 强制打包进 wheel，生产部署时可直接 cp 到 /etc。
# force-include 能把 packages 目录外的文件打进 wheel。
artifacts = ["config.example.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/redshift_mcp"]
force-include = { "config.example.yaml" = "redshift_mcp/config.example.yaml" }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx2",   # required by starlette.testclient（starlette>=1.3 起改用 httpx2，用 httpx 会触发弃用警告）
]

# uv workspace（monorepo）：plugins/ 下每个目录都是一个 workspace 成员包（通配，新增插件无需逐个声明）。
# 自带插件靠 `uv sync --all-packages` 一并 editable 装上，使其 entry-point 在开发期生效。
# 第三方插件不碰这里：自建 wheel、`uv pip install` 进同一 venv 即被 entry_points 自动发现加载。
[tool.uv.workspace]
members = ["plugins/*"]

# 各成员包对宿主 redshift-mcp 的依赖走本地 workspace（按包名匹配，一条覆盖所有成员，无需逐插件写）。
[tool.uv.sources]
redshift-mcp = { workspace = true }

[tool.pytest.ini_options]
# plugins/*/tests 通配纳入各插件自带测试（pytest≥7 支持 testpaths glob），新增插件无需登记。
testpaths = ["tests", "plugins/*/tests"]
asyncio_mode = "auto"
