[project]
name = "redshift-mcp"
version = "0.3.7"
description = "通用 Redshift MCP Server（Streamable HTTP）+ 插件框架：三件套通用查询工具 + entry_points / 声明式 SQL 扩展"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.2",
    # server.py 直接 import starlette 中间件/请求对象，提为直接依赖；
    # 下限 1.3.1 钉住一组 DoS / Host header 污染的安全修复（GHSA-82w8-qh3p-5jfq 等）。
    "starlette>=1.3.1",
    "psycopg[binary,pool]>=3.3.4",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "sqlglot>=30.11.0,<31",
    # 声明式 SQL 工具的可选 date 参数「省略取指定时区今天」依赖 zoneinfo；
    # 最小化容器常缺系统 tz 数据库，带上 tzdata 保证任何环境可解析 IANA 时区名。
    "tzdata>=2024.1",
    # 插件契约层 SDK：host 自己也从 redshift_mcp_sdk import PluginContext / GROUP 来构造并注入。
    # 契约与实现同仓分包（sdk/ workspace 成员），外部插件只依赖它、不引入 host 实现源码。
    # 下限=构建时契约版本，上限=下一主版本：SDK 主版本内严格向后兼容，故上浮安全、破坏性变更必升主版本。
    "redshift-mcp-sdk>=0.3,<1.0",
    # host 启动期对已装 SDK 做最低版本断言（server._check_sdk_version），用 packaging 做版本比较。
    # 显式声明而非依赖传递，避免上游偶然移除后 host 静默失去该能力。
    "packaging>=21",
]

[project.scripts]
redshift-mcp = "redshift_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 放在 [tool.hatch.build] 全局层（而非仅 targets.wheel），让 sdist 与 wheel 都生效 ——
# 否则 `uv build` 先打 sdist 再从 sdist 出 wheel，仅 wheel 配的 artifacts 会被绕过。
[tool.hatch.build]
# 把仓库根目录的 config.example.yaml 强制打包进 wheel，生产部署时可直接 cp 到 /etc。
# force-include 能把 packages 目录外的文件打进 wheel。
artifacts = ["config.example.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/redshift_mcp"]
force-include = { "config.example.yaml" = "redshift_mcp/config.example.yaml" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "httpx2",   # required by starlette.testclient（starlette>=1.3 起改用 httpx2，用 httpx 会触发弃用警告）
]

# uv workspace（monorepo）：sdk/ 是插件契约层 SDK 包，也是唯一的 workspace 成员。
# 插件全为外部独立仓（不在本仓内），靠自建 wheel、`uv pip install` 进同一 venv 后被
# entry_points 自动发现加载 —— host 不夹带任何 in-repo 插件。
[tool.uv.workspace]
members = ["sdk"]

# host 对本地 SDK 的依赖走 workspace 源（按包名匹配）。host 只依赖 redshift-mcp-sdk（契约层）。
[tool.uv.sources]
redshift-mcp-sdk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
