[project]
name = "redshift-mcp-complex"
version = "0.3.3"
description = "redshift-mcp 插件：Error API IP 命中统计（业务预设查询）"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
# 依赖宿主主程序（import PluginContext 类型）；自带配置加载用 pyyaml，独立项目显式声明、不靠 host 传递。
# workspace 下 redshift-mcp 走本地源（见根 pyproject 的 [tool.uv.sources]）。
dependencies = [
    "redshift-mcp",
    "pyyaml>=6",
]

# 关键：声明 entry-point，让主程序通过 importlib.metadata 自动发现本插件。
# 值 "<import_pkg>:register" 直接指向 register 函数。
[project.entry-points."redshift_mcp.plugins"]
complex = "redshift_mcp_complex:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 打包模型：build wheel 面向生产，把真实 config.yaml / *.sql 打进去（生产即装即用、默认路径即命中）。
# 放在 [tool.hatch.build] 全局层（而非仅 targets.wheel），让 sdist 与 wheel 都生效 ——
# 否则 `uv build` 先打 sdist 再从 sdist 出 wheel，仅 wheel 配的 artifacts 会被绕过。
[tool.hatch.build]
# 真实文件被根 .gitignore 忽略，hatchling 默认跳过，故用 artifacts 强制纳入。
# queries/ 整目录纳入：真实 SQL 不论叫什么名字都自动打进 wheel（不必与文件名耦合）。
# 但 artifacts 命中会短路、凌驾于下面的 exclude（见 hatchling config.py 的 include_path），
# 故必须用负向模式显式放过模板 *.example.sql，否则模板会被误打进分发包。
artifacts = [
    "src/redshift_mcp_complex/config.yaml",
    "src/redshift_mcp_complex/queries/*.sql",
    "!**/*.example.sql",
]
# 模板只留 git 仓库、不进分发包（否则会污染包目录、被误当默认配置）。
exclude = [
    "**/config.example.yaml",
    "**/*.example.sql",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redshift_mcp_complex"]

# 注：对宿主 redshift-mcp 的 workspace source 映射集中在根 pyproject 的
# [tool.uv.sources]（uv 惯例），本成员不再单独声明。
