[project]
name = "redshift-mcp-error-api"
version = "0.1.0"
description = "redshift-mcp 插件：Error API IP 命中统计（业务预设查询）"
readme = "README.md"
requires-python = ">=3.10"
# 依赖宿主主程序，用于 import PluginContext 类型；workspace 下走本地源（见下）。
dependencies = [
    "redshift-mcp",
]

# 关键：声明 entry-point，让主程序通过 importlib.metadata 自动发现本插件。
# 值 "<import_pkg>:register" 直接指向 register 函数。
[project.entry-points."redshift_mcp.plugins"]
error_api = "redshift_mcp_error_api:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redshift_mcp_error_api"]

# 注：对宿主 redshift-mcp 的 workspace source 映射集中在根 pyproject 的
# [tool.uv.sources]（uv 惯例），本成员不再单独声明。
